Refactor header styles and update logo dimensions

--- a/index.html
+++ b/index.html
@@ -44,19 +44,27 @@
   }
   .header-inner {
     max-width: 680px; margin: 0 auto;
-    padding: 28px 24px 24px;
-    display: flex; align-items: center; gap: 20px;
+    padding: 24px 24px 20px;
+    display: flex; align-items: center; gap: 18px;
     position: relative; z-index: 1;
   }
   .logo-wrap {
-    flex-shrink: 0; width: 72px; height: 72px;
-    background: white; border-radius: 14px;
-    display: flex; align-items: center; justify-content: center;
-    padding: 4px; box-shadow: 0 4px 20px rgba(0,0,0,0.25);
+    flex-shrink: 0; width: 160px; height: 100px;
+    background: #D7D7DB;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.25);
+    position: relative;
   }
-  .logo-wrap img { width: 100%; height: 100%; object-fit: contain; border-radius: 10px; }
+  .logo-wrap img {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    top: -34px;
+    left: 0;
+  }
   .header-text h1 {
-    font-size: clamp(18px, 5vw, 24px); font-weight: 800;
+    font-size: clamp(17px, 5vw, 24px); font-weight: 800;
     color: white; line-height: 1.2; letter-spacing: -0.3px;
   }
   .header-text .sub { font-size: 13px; font-weight: 500; color: var(--orange); margin-top: 4px; }
@@ -488,7 +496,7 @@
 
 <script>
   // ── IMPORTANTE: Pegá tu URL de Apps Script aquí ──────────
-  var SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzf4d0B4kBtXI9eImrfAdp80Nz89GeJW8T_PIPbsiuyZ6aHwrCU8wcAHXkDVs12ZpON/exec";
+  var SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzf4d0B4kBtXI9eImrfAdp80Nz89GeJW8T_PIPbsiuyZ6aHwrCU8wcAHXkDVs12ZpON/exec;
   var RECAPTCHA_SITE_KEY = "6LeYwHYsAAAAAC1Yw57sgDj3RZB4V7uAwKhWA-37";
   // ─────────────────────────────────────────────────────────
 
