--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
 <script>
   // ── IMPORTANTE: Pegá tu URL de Apps Script aquí ──────────
-  var SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzf4d0B4kBtXI9eImrfAdp80Nz89GeJW8T_PIPbsiuyZ6aHwrCU8wcAHXkDVs12ZpON/exec;
+  var SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzf4d0B4kBtXI9eImrfAdp80Nz89GeJW8T_PIPbsiuyZ6aHwrCU8wcAHXkDVs12ZpON/exec";
   var RECAPTCHA_SITE_KEY = "6LeYwHYsAAAAAC1Yw57sgDj3RZB4V7uAwKhWA-37";
   // ─────────────────────────────────────────────────────────
 
