Integrate WhatsApp contact links in index.html
Added WhatsApp contact option in submit sections.

--- a/index.html
+++ b/index.html
@@ -472,7 +472,11 @@
     <div class="submit-section">
       <h3>¡Casi listo! 🎉</h3>
       <p>Completá el formulario y tus respuestas me llegan automáticamente.<br>Me pongo en contacto en menos de 24 hs.</p>
-      <div class="phone-badge"><span>📱 +54 11 3833-4636</span></div>
+      <div class="submit-section" style="margin-top: 10px; background: #25D366;">
+           <a href="https://wa.me/541138334636" target="_blank" style="text-decoration: none; color: white; display: flex; align-items: center; justify-content: center; gap: 10px;">
+            <span style="font-weight: 800;">Contactar por WhatsApp</span>
+           </a>
+      </div>
       <button type="submit" class="btn-submit" id="btnSubmit">Enviar formulario →</button>
       <div class="error-banner" id="errorBanner">
         Hubo un problema al enviar. Intentá de nuevo o escribime directamente al WhatsApp.
@@ -487,7 +491,11 @@
     <h2>¡Muchas gracias!</h2>
     <p>Recibí tus respuestas y las guardé. En menos de 24 hs te cuento<br>exactamente cómo podemos automatizar tu negocio.</p>
     <p style="margin-top:12px;">También podés escribirme directamente:</p>
-    <div class="success-phone">📱 +54 11 3833-4636</div>
+    <div class="submit-section" style="margin-top: 10px; background: #25D366;">
+           <a href="https://wa.me/541138334636" target="_blank" style="text-decoration: none; color: white; display: flex; align-items: center; justify-content: center; gap: 10px;">
+            <span style="font-weight: 800;">Contactar por WhatsApp</span>
+           </a>
+    </div>
     <p style="font-size:12px; margin-top:8px; color:#AAB8CC;">¡Hablamos pronto! 🚀</p>
   </div>
 
