Replace WhatsApp contact sections with new design

--- a/index.html
+++ b/index.html
@@ -472,11 +472,9 @@
     <div class="submit-section">
       <h3>¡Casi listo! 🎉</h3>
       <p>Completá el formulario y tus respuestas me llegan automáticamente.<br>Me pongo en contacto en menos de 24 hs.</p>
-      <div class="submit-section" style="margin-top: 10px; background: #25D366;">
-           <a href="https://wa.me/541138334636" target="_blank" style="text-decoration: none; color: white; display: flex; align-items: center; justify-content: center; gap: 10px;">
-            <span style="font-weight: 800;">Contactar por WhatsApp</span>
-           </a>
-      </div>
+     <div class="whatsapp-button" style="background-color: #FF7F50; padding: 10px; border-radius: 5px; display: inline-block; color: white; text-align: center;">
+         WhatsApp
+     </div>
       <button type="submit" class="btn-submit" id="btnSubmit">Enviar formulario →</button>
       <div class="error-banner" id="errorBanner">
         Hubo un problema al enviar. Intentá de nuevo o escribime directamente al WhatsApp.
@@ -491,11 +489,9 @@
     <h2>¡Muchas gracias!</h2>
     <p>Recibí tus respuestas y las guardé. En menos de 24 hs te cuento<br>exactamente cómo podemos automatizar tu negocio.</p>
     <p style="margin-top:12px;">También podés escribirme directamente:</p>
-    <div class="submit-section" style="margin-top: 10px; background: #25D366;">
-           <a href="https://wa.me/541138334636" target="_blank" style="text-decoration: none; color: white; display: flex; align-items: center; justify-content: center; gap: 10px;">
-            <span style="font-weight: 800;">Contactar por WhatsApp</span>
-           </a>
-    </div>
+    <a href="https://wa.me/541138334636" target="_blank" style="display: inline-block; background: linear-gradient(135deg, var(--orange) 0%, #f4a940 100%); color: white; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-weight: 800; font-size: 14px; box-shadow: 0 4px 20px rgba(232,130,26,0.4); transition: transform .15s, box-shadow .15s; margin-top: 14px;">
+      Contactar por WhatsApp
+    </a>
     <p style="font-size:12px; margin-top:8px; color:#AAB8CC;">¡Hablamos pronto! 🚀</p>
   </div>
 
