--- a/index.html
+++ b/index.html
@@ -206,6 +206,17 @@
   .btn-submit:hover  { transform: translateY(-1px); box-shadow: 0 6px 28px rgba(232,130,26,0.5); }
   .btn-submit:active { transform: translateY(0); }
   .btn-submit:disabled { opacity: 0.7; cursor: not-allowed; transform: none; }
+  .whatsapp-link {
+    color: var(--orange);
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 14px;
+    transition: opacity .2s, transform .2s;
+  }
+  .whatsapp-link:hover {
+    opacity: 0.8;
+    transform: translateY(-1px);
+  }
 
   /* SENDING STATE */
   .sending-overlay {
@@ -472,7 +483,7 @@
     <div class="submit-section">
       <h3>¡Casi listo! 🎉</h3>
       <p>Completá el formulario y tus respuestas me llegan automáticamente.<br>Me pongo en contacto en menos de 24 hs.</p>
-      <a href="https://wa.me/541138334636" target="_blank" style="display: inline-block; background: linear-gradient(135deg, var(--orange) 0%, #f4a940 100%); color: white; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-weight: 800; font-size: 14px; box-shadow: 0 4px 20px rgba(232,130,26,0.4); transition: transform .15s, box-shadow .15s; margin-top: 14px;">
+      <a href="https://wa.me/541138334636" target="_blank" class="whatsapp-link">
         Contactar por WhatsApp
       </a>
       <button type="submit" class="btn-submit" id="btnSubmit">Enviar formulario →</button>
