--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
   <div class="success-screen" id="successScreen">
     <div class="success-icon">✅</div>
     <h2>¡Muchas gracias!</h2>
-    <p>Recibí tus respuestas y las guardé. En menos de 24 hs te cuento<br>exactamente cómo podemos automatizar tu negocio.</p>
+    <p>Recibí tus respuestas y las guardé. Proximamente te cuento<br>exactamente cómo podemos automatizar tu negocio.</p>
     <p style="margin-top:12px;">También podés escribirme directamente:</p>
     <a href="https://wa.me/541138334636" target="_blank" style="display: inline-block; background: linear-gradient(135deg, var(--orange) 0%, #f4a940 100%); color: white; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-weight: 800; font-size: 14px; box-shadow: 0 4px 20px rgba(232,130,26,0.4); transition: transform .15s, box-shadow .15s; margin-top: 14px;">
       Contactar por WhatsApp
